[package]
name = "mycelium-std-dense"
version.workspace = true
description = "std.dense — typed dim-tracked tensors/embeddings capability surface (M-518)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-dense = { path = "../mycelium-dense" }
